# classicube-held-block-info-plugin

./: Cargo.toml
.github/workflows/: build.yml  release-artifacts.yml  release.yml
src/: component.rs  lib.rs
src/components/: held_block_info.rs  logger.rs  mod.rs
